ensure wraps don't collapse margin

--- a/scss/custom/mixins/components/layout/_wraps.scss
+++ b/scss/custom/mixins/components/layout/_wraps.scss
@@ -18,6 +18,8 @@ $wrap-widths: (
 }
 
 @mixin wrap-base {
+  display: table;
+  width: 100%;
   @include wrap-margin;
   @include wrap-padding;
 }
